--- a/TiVo/Tivo_QEight.ipynb
+++ b/TiVo/Tivo_QEight.ipynb
@@ -4,24 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TiVo\n",
-    "\n",
-    "### Focus\n",
-    "TiVo value propositon and how to measure it\n",
-    "\n",
-    "### Qs\n",
-    "- does the study evaluate consumer attitudes well?\n",
-    "- what are strengths/ weaknesses of the present approach?\n",
-    "- would you do anything diff in the market research project? what would you have done and what would you expect to find?\n",
-    "- why segment in the first place? best way?\n",
-    "- how do diff kinds of research relate?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Undertstanding Data"
+    "# TiVo Q8\n",
+    "## Segmenting by education and marriage"
    ]
   },
   {
@@ -502,20 +486,6 @@
     "dfE[\"Technology Adoption\"] = dfE[\"Technology Adoption\"].cat.codes\n",
     "dfE[\"Favorite feature\"] = dfE[\"Favorite feature\"].cat.codes\n",
     "dfE.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# segmentation by Demographic"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### education"
    ]
   },
   {
@@ -2474,559 +2444,6 @@
     "print(\"stores shopped for electronics: \", e4.sng[\"Purchasing Location\"].mode()[0])\n",
     "print(\"average spending on electronics/year: \", round(e4.sng[\"Annual Spending on Electronics\"].mean(),2))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# segmentation by VP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vp1 = df.loc[(df[\"Favorite feature\"] == \"saving favorite shows to watch as a family\")]\n",
-    "import seaborn as sb\n",
-    "vp1.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(vp1.loc[:, vp1.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vp2 = df.loc[(df[\"Favorite feature\"] == \"time shifting\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(vp2.loc[:, vp2.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vp3 = df.loc[(df[\"Favorite feature\"] == \"cool gadget\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(vp3.loc[:, vp3.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vp4 = df.loc[(df[\"Favorite feature\"] == \"schedule control\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(vp4.loc[:, vp1.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vp5 = df.loc[(df[\"Favorite feature\"] == \"programming/interactive features\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(vp5.loc[:, vp5.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# segmentation by Marriage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m1 = df.loc[(df[\"Marital Status\"] == \"married\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(m1.loc[:, m1.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(m1.loc[:, m1.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m2 = df.loc[(df[\"Marital Status\"] == \"single\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(m2.loc[:, m2.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(m2.loc[:, m2.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# + Work Status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m1_p = m1.loc[(m1[\"Work Status\"] == \"professional\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(m1_p.loc[:, m1_p.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(m1_p.loc[:, m1_p.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m1_n = m1.loc[(m1[\"Work Status\"] == \"none\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(m1_n.loc[:, m1_n.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(m1_n.loc[:, m1_n.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m2_p = m2.loc[(m2[\"Work Status\"] == \"professional\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(m2_p.loc[:, m2_p.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(m2_p.loc[:, m2_p.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m2_n = m2.loc[(m2[\"Work Status\"] == \"professional\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(m2_n.loc[:, m2_n.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(m2_n.loc[:, m2_n.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# segmentation by Purchasing Location"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p1[\"Favorite feature\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p1 = df.loc[(df[\"Purchasing Location\"] == \"mass-consumer electronics\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(p1.loc[:, p1.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(p1.loc[:, p1.columns != 'ID'],hue = \"Technology Adoption\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.hist(p1[\"Monthly Electronics Spend\"])\n",
-    "plt.title(\"Distribution of Monthly Electronics Spend of customers at Mass Consumer Electronics\")\n",
-    "plt.xlabel(\"Monthly Electronics Spend\")\n",
-    "\n",
-    "plt.axvline(p1[\"Monthly Electronics Spend\"].mean(), color='k', linestyle='dashed', linewidth=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "p2 = df.loc[(df[\"Purchasing Location\"] == \"discount\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(p2.loc[:, p2.columns != 'ID'],hue = \"Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "p2[\"Favorite feature\"].value_counts()/len(p2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.scatter(p2[\"Favorite feature\"],p2[\"Monthly Electronics Spend\"])\n",
-    "\n",
-    "plt.xlabel(\"Favorite feature\")\n",
-    "plt.ylabel(\"Monthly Electronics Spend\")\n",
-    "plt.title(\"Monthly Electronics Spend Vs Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "p3 = df.loc[(df[\"Purchasing Location\"] == \"retail\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(p3.loc[:, p3.columns != 'ID'],hue = \"Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p3[\"Favorite feature\"].value_counts()/len(p3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p4 = df.loc[(df[\"Purchasing Location\"] == \"specialty stores\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(p4.loc[:, p4.columns != 'ID'],hue = \"Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "p5 = df.loc[(df[\"Purchasing Location\"] == \"web (ebay)\")]\n",
-    "import seaborn as sb\n",
-    "\n",
-    "sb.pairplot(p5.loc[:, p5.columns != 'ID'],hue = \"Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# age and tv viewing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "yl.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "yl[\"Favorite feature\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yl[yl[\"Favorite feature\"] == \"saving favorite shows to watch as a family\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(data = yl[1:], vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(data = yl[1:], vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(data = yh, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(data = yh, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Purchasing Location\")sb.pairplot(data = yh, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(data = ol, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(data = ol, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "sb.pairplot(data = oh, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Favorite feature\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "sb.pairplot(data = yh, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# segmentation by early vs late"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "early = df.loc[(df[\"Technology Adoption\"] == \"early\")]\n",
-    "sb.pairplot(data = early, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Favorite feature\")\n",
-    "sb.pairplot(data = early, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "late = df.loc[(df[\"Technology Adoption\"] == \"late\")]\n",
-    "sb.pairplot(data = late, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Favorite feature\")\n",
-    "sb.pairplot(data = late, vars = [\"Annual Income (x1000 $)\",\"Age\",\"Monthly Electronics Spend\",\"TV Viewing (hours/day)\"], hue=\"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#work status and age\n",
-    "\n",
-    "yp= df.loc[(df[\"Age\"] <= 30) & (df[\"Work Status\"] == \"professional\")]\n",
-    "op= df.loc[(df[\"Age\"] > 30) & (df[\"Work Status\"] == \"professional\")]\n",
-    "yn= df.loc[(df[\"Age\"] <= 30) & (df[\"Work Status\"] == \"none\")]\n",
-    "on= df.loc[(df[\"Age\"] > 30) & (df[\"Work Status\"] == \"none\")]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(yp.loc[:, yp.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(yp.loc[:, yp.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "sb.pairplot(op.loc[:, op.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(op.loc[:, op.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "yn[\"Favorite feature\"].value_counts()\n",
-    "\n",
-    "yn[yn[\"Favorite feature\"]==\"saving favorite shows to watch as a family\"]\n",
-    "yn = yn[yn[\"ID\"] != 240 ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yn[\"Purchasing Location\"].value_counts()\n",
-    "yn[yn[\"Purchasing Location\"]==\"mass-consumer electronics\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(yn.loc[:, yn.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(yn.loc[:, yn.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sb.pairplot(on.loc[:, on.columns != 'ID'],hue = \"Favorite feature\")\n",
-    "sb.pairplot(on.loc[:, on.columns != 'ID'],hue = \"Purchasing Location\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
