--- a/Regression/Prep.ipynb
+++ b/Regression/Prep.ipynb
@@ -161,343 +161,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>916.79155244492</li>\n",
-       "\t<li>497.71273182705</li>\n",
-       "\t<li>12.2594307176769</li>\n",
-       "\t<li>927.227792795748</li>\n",
-       "\t<li>532.29404729791</li>\n",
-       "\t<li>190.551593201235</li>\n",
-       "\t<li>536.975047318265</li>\n",
-       "\t<li>269.986529834569</li>\n",
-       "\t<li>2.0631873048842</li>\n",
-       "\t<li>134.958904702216</li>\n",
-       "\t<li>552.332974970341</li>\n",
-       "\t<li>464.631423121318</li>\n",
-       "\t<li>139.118690509349</li>\n",
-       "\t<li>23.0916701257229</li>\n",
-       "\t<li>433.479499770328</li>\n",
-       "\t<li>807.346939342096</li>\n",
-       "\t<li>370.020896894857</li>\n",
-       "\t<li>928.212781436741</li>\n",
-       "\t<li>70.7335928454995</li>\n",
-       "\t<li>292.789654573426</li>\n",
-       "\t<li>443.44776077196</li>\n",
-       "\t<li>384.916819399223</li>\n",
-       "\t<li>638.89264059253</li>\n",
-       "\t<li>827.058931579813</li>\n",
-       "\t<li>911.186669487506</li>\n",
-       "\t<li>226.385677000508</li>\n",
-       "\t<li>47.9604431893677</li>\n",
-       "\t<li>295.944839017466</li>\n",
-       "\t<li>59.4447418116033</li>\n",
-       "\t<li>513.423671014607</li>\n",
-       "\t<li>51.5940156765282</li>\n",
-       "\t<li>754.621632862836</li>\n",
-       "\t<li>497.583732707426</li>\n",
-       "\t<li>451.543246395886</li>\n",
-       "\t<li>414.282239042222</li>\n",
-       "\t<li>775.742025114596</li>\n",
-       "\t<li>665.297070285305</li>\n",
-       "\t<li>48.4574192669243</li>\n",
-       "\t<li>745.91698567383</li>\n",
-       "\t<li>282.149400794879</li>\n",
-       "\t<li>163.238976383582</li>\n",
-       "\t<li>766.460135346279</li>\n",
-       "\t<li>920.658832648769</li>\n",
-       "\t<li>438.845161581412</li>\n",
-       "\t<li>267.413016874343</li>\n",
-       "\t<li>11.9376436341554</li>\n",
-       "\t<li>622.75277916342</li>\n",
-       "\t<li>304.804255720228</li>\n",
-       "\t<li>329.692252445966</li>\n",
-       "\t<li>747.121078427881</li>\n",
-       "\t<li>873.367920285091</li>\n",
-       "\t<li>31.8767412099987</li>\n",
-       "\t<li>789.210821967572</li>\n",
-       "\t<li>223.980158334598</li>\n",
-       "\t<li>13.5180351790041</li>\n",
-       "\t<li>539.110942976549</li>\n",
-       "\t<li>342.729317257181</li>\n",
-       "\t<li>909.218411892653</li>\n",
-       "\t<li>452.17008353211</li>\n",
-       "\t<li>896.66882972233</li>\n",
-       "\t<li>730.985549278557</li>\n",
-       "\t<li>535.73428792879</li>\n",
-       "\t<li>399.417154723778</li>\n",
-       "\t<li>134.977692738175</li>\n",
-       "\t<li>64.3332987092435</li>\n",
-       "\t<li>344.624057877809</li>\n",
-       "\t<li>133.500382071361</li>\n",
-       "\t<li>710.997444111854</li>\n",
-       "\t<li>243.355812737718</li>\n",
-       "\t<li>428.298478014767</li>\n",
-       "\t<li>631.864815019071</li>\n",
-       "\t<li>810.151642886922</li>\n",
-       "\t<li>399.211603216827</li>\n",
-       "\t<li>969.189200550318</li>\n",
-       "\t<li>681.322343414649</li>\n",
-       "\t<li>647.153663448989</li>\n",
-       "\t<li>672.764550428838</li>\n",
-       "\t<li>645.897110924125</li>\n",
-       "\t<li>265.698579372838</li>\n",
-       "\t<li>27.7454133611172</li>\n",
-       "\t<li>764.073145575821</li>\n",
-       "\t<li>778.151651611552</li>\n",
-       "\t<li>719.107454176992</li>\n",
-       "\t<li>519.120620563626</li>\n",
-       "\t<li>30.6147567462176</li>\n",
-       "\t<li>46.13515897654</li>\n",
-       "\t<li>715.297308284789</li>\n",
-       "\t<li>143.570030340925</li>\n",
-       "\t<li>455.146313412115</li>\n",
-       "\t<li>803.093270864338</li>\n",
-       "\t<li>518.493379466236</li>\n",
-       "\t<li>51.4219340402633</li>\n",
-       "\t<li>965.745004592463</li>\n",
-       "\t<li>943.758716573939</li>\n",
-       "\t<li>866.907198214903</li>\n",
-       "\t<li>645.770097384229</li>\n",
-       "\t<li>842.018639668822</li>\n",
-       "\t<li>645.864553749561</li>\n",
-       "\t<li>452.643976081163</li>\n",
-       "\t<li>447.249338263646</li>\n",
-       "</ol>\n"
+       "<span style=white-space:pre-wrap>'test rmse:  4770.44117744198'</span>"
       ],
       "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 916.79155244492\n",
-       "\\item 497.71273182705\n",
-       "\\item 12.2594307176769\n",
-       "\\item 927.227792795748\n",
-       "\\item 532.29404729791\n",
-       "\\item 190.551593201235\n",
-       "\\item 536.975047318265\n",
-       "\\item 269.986529834569\n",
-       "\\item 2.0631873048842\n",
-       "\\item 134.958904702216\n",
-       "\\item 552.332974970341\n",
-       "\\item 464.631423121318\n",
-       "\\item 139.118690509349\n",
-       "\\item 23.0916701257229\n",
-       "\\item 433.479499770328\n",
-       "\\item 807.346939342096\n",
-       "\\item 370.020896894857\n",
-       "\\item 928.212781436741\n",
-       "\\item 70.7335928454995\n",
-       "\\item 292.789654573426\n",
-       "\\item 443.44776077196\n",
-       "\\item 384.916819399223\n",
-       "\\item 638.89264059253\n",
-       "\\item 827.058931579813\n",
-       "\\item 911.186669487506\n",
-       "\\item 226.385677000508\n",
-       "\\item 47.9604431893677\n",
-       "\\item 295.944839017466\n",
-       "\\item 59.4447418116033\n",
-       "\\item 513.423671014607\n",
-       "\\item 51.5940156765282\n",
-       "\\item 754.621632862836\n",
-       "\\item 497.583732707426\n",
-       "\\item 451.543246395886\n",
-       "\\item 414.282239042222\n",
-       "\\item 775.742025114596\n",
-       "\\item 665.297070285305\n",
-       "\\item 48.4574192669243\n",
-       "\\item 745.91698567383\n",
-       "\\item 282.149400794879\n",
-       "\\item 163.238976383582\n",
-       "\\item 766.460135346279\n",
-       "\\item 920.658832648769\n",
-       "\\item 438.845161581412\n",
-       "\\item 267.413016874343\n",
-       "\\item 11.9376436341554\n",
-       "\\item 622.75277916342\n",
-       "\\item 304.804255720228\n",
-       "\\item 329.692252445966\n",
-       "\\item 747.121078427881\n",
-       "\\item 873.367920285091\n",
-       "\\item 31.8767412099987\n",
-       "\\item 789.210821967572\n",
-       "\\item 223.980158334598\n",
-       "\\item 13.5180351790041\n",
-       "\\item 539.110942976549\n",
-       "\\item 342.729317257181\n",
-       "\\item 909.218411892653\n",
-       "\\item 452.17008353211\n",
-       "\\item 896.66882972233\n",
-       "\\item 730.985549278557\n",
-       "\\item 535.73428792879\n",
-       "\\item 399.417154723778\n",
-       "\\item 134.977692738175\n",
-       "\\item 64.3332987092435\n",
-       "\\item 344.624057877809\n",
-       "\\item 133.500382071361\n",
-       "\\item 710.997444111854\n",
-       "\\item 243.355812737718\n",
-       "\\item 428.298478014767\n",
-       "\\item 631.864815019071\n",
-       "\\item 810.151642886922\n",
-       "\\item 399.211603216827\n",
-       "\\item 969.189200550318\n",
-       "\\item 681.322343414649\n",
-       "\\item 647.153663448989\n",
-       "\\item 672.764550428838\n",
-       "\\item 645.897110924125\n",
-       "\\item 265.698579372838\n",
-       "\\item 27.7454133611172\n",
-       "\\item 764.073145575821\n",
-       "\\item 778.151651611552\n",
-       "\\item 719.107454176992\n",
-       "\\item 519.120620563626\n",
-       "\\item 30.6147567462176\n",
-       "\\item 46.13515897654\n",
-       "\\item 715.297308284789\n",
-       "\\item 143.570030340925\n",
-       "\\item 455.146313412115\n",
-       "\\item 803.093270864338\n",
-       "\\item 518.493379466236\n",
-       "\\item 51.4219340402633\n",
-       "\\item 965.745004592463\n",
-       "\\item 943.758716573939\n",
-       "\\item 866.907198214903\n",
-       "\\item 645.770097384229\n",
-       "\\item 842.018639668822\n",
-       "\\item 645.864553749561\n",
-       "\\item 452.643976081163\n",
-       "\\item 447.249338263646\n",
-       "\\end{enumerate*}\n"
+       "'test rmse:  4770.44117744198'"
       ],
       "text/markdown": [
-       "1. 916.79155244492\n",
-       "2. 497.71273182705\n",
-       "3. 12.2594307176769\n",
-       "4. 927.227792795748\n",
-       "5. 532.29404729791\n",
-       "6. 190.551593201235\n",
-       "7. 536.975047318265\n",
-       "8. 269.986529834569\n",
-       "9. 2.0631873048842\n",
-       "10. 134.958904702216\n",
-       "11. 552.332974970341\n",
-       "12. 464.631423121318\n",
-       "13. 139.118690509349\n",
-       "14. 23.0916701257229\n",
-       "15. 433.479499770328\n",
-       "16. 807.346939342096\n",
-       "17. 370.020896894857\n",
-       "18. 928.212781436741\n",
-       "19. 70.7335928454995\n",
-       "20. 292.789654573426\n",
-       "21. 443.44776077196\n",
-       "22. 384.916819399223\n",
-       "23. 638.89264059253\n",
-       "24. 827.058931579813\n",
-       "25. 911.186669487506\n",
-       "26. 226.385677000508\n",
-       "27. 47.9604431893677\n",
-       "28. 295.944839017466\n",
-       "29. 59.4447418116033\n",
-       "30. 513.423671014607\n",
-       "31. 51.5940156765282\n",
-       "32. 754.621632862836\n",
-       "33. 497.583732707426\n",
-       "34. 451.543246395886\n",
-       "35. 414.282239042222\n",
-       "36. 775.742025114596\n",
-       "37. 665.297070285305\n",
-       "38. 48.4574192669243\n",
-       "39. 745.91698567383\n",
-       "40. 282.149400794879\n",
-       "41. 163.238976383582\n",
-       "42. 766.460135346279\n",
-       "43. 920.658832648769\n",
-       "44. 438.845161581412\n",
-       "45. 267.413016874343\n",
-       "46. 11.9376436341554\n",
-       "47. 622.75277916342\n",
-       "48. 304.804255720228\n",
-       "49. 329.692252445966\n",
-       "50. 747.121078427881\n",
-       "51. 873.367920285091\n",
-       "52. 31.8767412099987\n",
-       "53. 789.210821967572\n",
-       "54. 223.980158334598\n",
-       "55. 13.5180351790041\n",
-       "56. 539.110942976549\n",
-       "57. 342.729317257181\n",
-       "58. 909.218411892653\n",
-       "59. 452.17008353211\n",
-       "60. 896.66882972233\n",
-       "61. 730.985549278557\n",
-       "62. 535.73428792879\n",
-       "63. 399.417154723778\n",
-       "64. 134.977692738175\n",
-       "65. 64.3332987092435\n",
-       "66. 344.624057877809\n",
-       "67. 133.500382071361\n",
-       "68. 710.997444111854\n",
-       "69. 243.355812737718\n",
-       "70. 428.298478014767\n",
-       "71. 631.864815019071\n",
-       "72. 810.151642886922\n",
-       "73. 399.211603216827\n",
-       "74. 969.189200550318\n",
-       "75. 681.322343414649\n",
-       "76. 647.153663448989\n",
-       "77. 672.764550428838\n",
-       "78. 645.897110924125\n",
-       "79. 265.698579372838\n",
-       "80. 27.7454133611172\n",
-       "81. 764.073145575821\n",
-       "82. 778.151651611552\n",
-       "83. 719.107454176992\n",
-       "84. 519.120620563626\n",
-       "85. 30.6147567462176\n",
-       "86. 46.13515897654\n",
-       "87. 715.297308284789\n",
-       "88. 143.570030340925\n",
-       "89. 455.146313412115\n",
-       "90. 803.093270864338\n",
-       "91. 518.493379466236\n",
-       "92. 51.4219340402633\n",
-       "93. 965.745004592463\n",
-       "94. 943.758716573939\n",
-       "95. 866.907198214903\n",
-       "96. 645.770097384229\n",
-       "97. 842.018639668822\n",
-       "98. 645.864553749561\n",
-       "99. 452.643976081163\n",
-       "100. 447.249338263646\n",
-       "\n",
-       "\n"
+       "<span style=white-space:pre-wrap>'test rmse:  4770.44117744198'</span>"
       ],
       "text/plain": [
-       "  [1] 916.791552 497.712732  12.259431 927.227793 532.294047 190.551593\n",
-       "  [7] 536.975047 269.986530   2.063187 134.958905 552.332975 464.631423\n",
-       " [13] 139.118691  23.091670 433.479500 807.346939 370.020897 928.212781\n",
-       " [19]  70.733593 292.789655 443.447761 384.916819 638.892641 827.058932\n",
-       " [25] 911.186669 226.385677  47.960443 295.944839  59.444742 513.423671\n",
-       " [31]  51.594016 754.621633 497.583733 451.543246 414.282239 775.742025\n",
-       " [37] 665.297070  48.457419 745.916986 282.149401 163.238976 766.460135\n",
-       " [43] 920.658833 438.845162 267.413017  11.937644 622.752779 304.804256\n",
-       " [49] 329.692252 747.121078 873.367920  31.876741 789.210822 223.980158\n",
-       " [55]  13.518035 539.110943 342.729317 909.218412 452.170084 896.668830\n",
-       " [61] 730.985549 535.734288 399.417155 134.977693  64.333299 344.624058\n",
-       " [67] 133.500382 710.997444 243.355813 428.298478 631.864815 810.151643\n",
-       " [73] 399.211603 969.189201 681.322343 647.153663 672.764550 645.897111\n",
-       " [79] 265.698579  27.745413 764.073146 778.151652 719.107454 519.120621\n",
-       " [85]  30.614757  46.135159 715.297308 143.570030 455.146313 803.093271\n",
-       " [91] 518.493379  51.421934 965.745005 943.758717 866.907198 645.770097\n",
-       " [97] 842.018640 645.864554 452.643976 447.249338"
+       "[1] \"test rmse:  4770.44117744198\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=white-space:pre-wrap>'test rsq:  0.183027820685978'</span>"
+      ],
+      "text/latex": [
+       "'test rsq:  0.183027820685978'"
+      ],
+      "text/markdown": [
+       "<span style=white-space:pre-wrap>'test rsq:  0.183027820685978'</span>"
+      ],
+      "text/plain": [
+       "[1] \"test rsq:  0.183027820685978\""
       ]
      },
      "metadata": {},
@@ -505,7 +202,17 @@
     }
    ],
    "source": [
-    "c(hData$kindness)"
+    "hData2 = read.csv('finalhiba31.csv')\n",
+    "hData2$pred  <- c(9.997*hData2$kindness+9.487*hData2$clean - 164.263)\n",
+    "rmse <- function(error)\n",
+    "{\n",
+    "    sqrt(mean(error^2))\n",
+    "}\n",
+    "\n",
+    "rsq <- function (x, y) cor(x, y) ^ 2\n",
+    "\n",
+    "paste('test rmse: ',rmse(hData2$quality-hData2$pred))\n",
+    "paste('test rsq: ',rsq(hData2$quality,hData2$pred))"
    ]
   },
   {
@@ -525,9 +232,7 @@
     }
    ],
    "source": [
-    "plot(c(hData$kindness), c(hData$Quality))\n",
-    "\n",
-    "lines()"
+    "plot(c(hData$kindness), c(hData$Quality))"
    ]
   },
   {
