--- a/statistical_inference/Class.ipynb
+++ b/statistical_inference/Class.ipynb
@@ -653,6 +653,144 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "Come to class with two working Fisher Exact Test functions that output ATE and the p-value.\n",
+    "\n",
+    "\n",
+    "The first function should be designed to take a vector of 16 observed Ys (outcomes) -- 8 treated and 8 control--when the assignment mechanism allows for any 8 random units to be treated and the remainder to be control units.\n",
+    "\n",
+    "​\n",
+    "\n",
+    "The second function should be designed to take a vector of 16 observed Ys (outcomes) -- 8 treated and 8 control--when the assignment mechanism involves pairwise blocking--8 blocks in particular--that establish units 1 and 2 are a block and if one is treated, the other must be control, units 3 and 4 are a block, units 5 and 6 are a block, etc., etc., all the way up to units 15 and 16.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:1:46: unexpected '/'\n1: length(which(results >= observed.diffmeans))//\n                                                 ^\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in parse(text = x, srcfile = src): <text>:1:46: unexpected '/'\n1: length(which(results >= observed.diffmeans))//\n                                                 ^\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "def \n",
+    "length(which(results >= observed.diffmeans))//iteractions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in is.data.frame(x): object 'x' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in is.data.frame(x): object 'x' not found\nTraceback:\n",
+      "1. fisher.test(x, y = NULL, workspace = 2e+05, hybrid = FALSE, hybridPars = c(expect = 5, \n .     percent = 80, Emin = 1), control = list(), or = 1, alternative = \"two.sided\", \n .     conf.int = TRUE, conf.level = 0.95, simulate.p.value = FALSE, \n .     B = 2000)",
+      "2. is.data.frame(x)"
+     ]
+    }
+   ],
+   "source": [
+    "fisher.test(x, y = NULL, workspace = 200000, hybrid = FALSE,\n",
+    "            hybridPars = c(expect = 5, percent = 80, Emin = 1),\n",
+    "            control = list(), or = 1, alternative = \"two.sided\",\n",
+    "            conf.int = TRUE, conf.level = 0.95,\n",
+    "            simulate.p.value = FALSE, B = 2000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TeaTasting <- matrix(c(3, 1, 1, 3),nrow = 2,dimnames = list(Guess = c(\"Milk\", \"Tea\"), Truth = c(\"Milk\", \"Tea\")))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>Milk</th><th scope=col>Tea</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Milk</th><td>3</td><td>1</td></tr>\n",
+       "\t<tr><th scope=row>Tea</th><td>1</td><td>3</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ll}\n",
+       "  & Milk & Tea\\\\\n",
+       "\\hline\n",
+       "\tMilk & 3 & 1\\\\\n",
+       "\tTea & 1 & 3\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | Milk | Tea |\n",
+       "|---|---|---|\n",
+       "| Milk | 3 | 1 |\n",
+       "| Tea | 1 | 3 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "      Truth\n",
+       "Guess  Milk Tea\n",
+       "  Milk 3    1  \n",
+       "  Tea  1    3  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "TeaTasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:6:0: unexpected end of input\n4: \n5: treatment = \n  ^\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in parse(text = x, srcfile = src): <text>:6:0: unexpected end of input\n4: \n5: treatment = \n  ^\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "results1 = matrix(c(7, 1, 1, 7),nrow = 2,dimnames = list(Guess = c(\"Treat\", \"Control\"), Truth = c(\"Treat\", \"Control\")))\n",
+    "\n",
+    "# function one\n",
+    "\n",
+    "treatment = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -668,7 +806,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
