--- a/statistical_inference/A2.ipynb
+++ b/statistical_inference/A2.ipynb
@@ -566,6 +566,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>5</li>\n",
+       "\t<li>12</li>\n",
+       "\t<li>21</li>\n",
+       "\t<li>32</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 5\n",
+       "\\item 12\n",
+       "\\item 21\n",
+       "\\item 32\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 5\n",
+       "2. 12\n",
+       "3. 21\n",
+       "4. 32\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  5 12 21 32"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = c(1,2,3,4)\n",
+    "b = c(5,6,7,8)\n",
+    "\n",
+    "a*b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
@@ -1694,7 +1740,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
