complete rep code

--- a/Unemployment_VoterTurnout/Rep_UnemploymentOnVoterTurnout.ipynb
+++ b/Unemployment_VoterTurnout/Rep_UnemploymentOnVoterTurnout.ipynb
@@ -13231,7 +13231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extension: Gen"
+    "# Extension: Gen Match"
    ]
   },
   {
@@ -62575,219 +62575,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<dl>\n",
-       "\t<dt>$Gamma</dt>\n",
-       "\t\t<dd>1.5</dd>\n",
-       "\t<dt>$GammaInc</dt>\n",
-       "\t\t<dd>0.1</dd>\n",
-       "\t<dt>$pval</dt>\n",
-       "\t\t<dd>0.0118</dd>\n",
-       "\t<dt>$msg</dt>\n",
-       "\t\t<dd>'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\n'</dd>\n",
-       "\t<dt>$bounds</dt>\n",
-       "\t\t<dd><table>\n",
-       "<thead><tr><th scope=col>Gamma</th><th scope=col>Lower bound</th><th scope=col>Upper bound</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>1.0   </td><td>0.0118</td><td>0.0118</td></tr>\n",
-       "\t<tr><td>1.1   </td><td>0.0002</td><td>0.1577</td></tr>\n",
-       "\t<tr><td>1.2   </td><td>0.0000</td><td>0.5575</td></tr>\n",
-       "\t<tr><td>1.3   </td><td>0.0000</td><td>0.8852</td></tr>\n",
-       "\t<tr><td>1.4   </td><td>0.0000</td><td>0.9854</td></tr>\n",
-       "\t<tr><td>1.5   </td><td>0.0000</td><td>0.9990</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n",
-       "</dd>\n",
-       "\t<dt>$note</dt>\n",
-       "\t\t<dd>'Note: Gamma is Odds of Differential Assignment To\\n Treatment Due to Unobserved Factors \\n'</dd>\n",
-       "</dl>\n"
-      ],
-      "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$Gamma] 1.5\n",
-       "\\item[\\$GammaInc] 0.1\n",
-       "\\item[\\$pval] 0.0118\n",
-       "\\item[\\$msg] 'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\textbackslash{}n'\n",
-       "\\item[\\$bounds] \\begin{tabular}{r|lll}\n",
-       " Gamma & Lower bound & Upper bound\\\\\n",
-       "\\hline\n",
-       "\t 1.0    & 0.0118 & 0.0118\\\\\n",
-       "\t 1.1    & 0.0002 & 0.1577\\\\\n",
-       "\t 1.2    & 0.0000 & 0.5575\\\\\n",
-       "\t 1.3    & 0.0000 & 0.8852\\\\\n",
-       "\t 1.4    & 0.0000 & 0.9854\\\\\n",
-       "\t 1.5    & 0.0000 & 0.9990\\\\\n",
-       "\\end{tabular}\n",
-       "\n",
-       "\\item[\\$note] 'Note: Gamma is Odds of Differential Assignment To\\textbackslash{}n Treatment Due to Unobserved Factors \\textbackslash{}n'\n",
-       "\\end{description}\n"
-      ],
-      "text/markdown": [
-       "$Gamma\n",
-       ":   1.5\n",
-       "$GammaInc\n",
-       ":   0.1\n",
-       "$pval\n",
-       ":   0.0118\n",
-       "$msg\n",
-       ":   'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\n'\n",
-       "$bounds\n",
-       ":   \n",
-       "| Gamma | Lower bound | Upper bound |\n",
-       "|---|---|---|\n",
-       "| 1.0    | 0.0118 | 0.0118 |\n",
-       "| 1.1    | 0.0002 | 0.1577 |\n",
-       "| 1.2    | 0.0000 | 0.5575 |\n",
-       "| 1.3    | 0.0000 | 0.8852 |\n",
-       "| 1.4    | 0.0000 | 0.9854 |\n",
-       "| 1.5    | 0.0000 | 0.9990 |\n",
-       "\n",
-       "\n",
-       "$note\n",
-       ":   'Note: Gamma is Odds of Differential Assignment To\\n Treatment Due to Unobserved Factors \\n'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "\n",
-       " Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \n",
-       " \n",
-       "Unconfounded estimate ....  0.0118 \n",
-       "\n",
-       " Gamma Lower bound Upper bound\n",
-       "   1.0      0.0118      0.0118\n",
-       "   1.1      0.0002      0.1577\n",
-       "   1.2      0.0000      0.5575\n",
-       "   1.3      0.0000      0.8852\n",
-       "   1.4      0.0000      0.9854\n",
-       "   1.5      0.0000      0.9990\n",
-       "\n",
-       " Note: Gamma is Odds of Differential Assignment To\n",
-       " Treatment Due to Unobserved Factors \n",
-       " "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<dl>\n",
-       "\t<dt>$Gamma</dt>\n",
-       "\t\t<dd>1.5</dd>\n",
-       "\t<dt>$GammaInc</dt>\n",
-       "\t\t<dd>0.1</dd>\n",
-       "\t<dt>$pval</dt>\n",
-       "\t\t<dd>0.0331</dd>\n",
-       "\t<dt>$msg</dt>\n",
-       "\t\t<dd>'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\n'</dd>\n",
-       "\t<dt>$bounds</dt>\n",
-       "\t\t<dd><table>\n",
-       "<thead><tr><th scope=col>Gamma</th><th scope=col>Lower bound</th><th scope=col>Upper bound</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>1.0   </td><td>0.0331</td><td>0.0331</td></tr>\n",
-       "\t<tr><td>1.1   </td><td>0.0014</td><td>0.2431</td></tr>\n",
-       "\t<tr><td>1.2   </td><td>0.0000</td><td>0.6342</td></tr>\n",
-       "\t<tr><td>1.3   </td><td>0.0000</td><td>0.9031</td></tr>\n",
-       "\t<tr><td>1.4   </td><td>0.0000</td><td>0.9856</td></tr>\n",
-       "\t<tr><td>1.5   </td><td>0.0000</td><td>0.9987</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n",
-       "</dd>\n",
-       "\t<dt>$note</dt>\n",
-       "\t\t<dd>'Note: Gamma is Odds of Differential Assignment To\\n Treatment Due to Unobserved Factors \\n'</dd>\n",
-       "</dl>\n"
-      ],
-      "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$Gamma] 1.5\n",
-       "\\item[\\$GammaInc] 0.1\n",
-       "\\item[\\$pval] 0.0331\n",
-       "\\item[\\$msg] 'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\textbackslash{}n'\n",
-       "\\item[\\$bounds] \\begin{tabular}{r|lll}\n",
-       " Gamma & Lower bound & Upper bound\\\\\n",
-       "\\hline\n",
-       "\t 1.0    & 0.0331 & 0.0331\\\\\n",
-       "\t 1.1    & 0.0014 & 0.2431\\\\\n",
-       "\t 1.2    & 0.0000 & 0.6342\\\\\n",
-       "\t 1.3    & 0.0000 & 0.9031\\\\\n",
-       "\t 1.4    & 0.0000 & 0.9856\\\\\n",
-       "\t 1.5    & 0.0000 & 0.9987\\\\\n",
-       "\\end{tabular}\n",
-       "\n",
-       "\\item[\\$note] 'Note: Gamma is Odds of Differential Assignment To\\textbackslash{}n Treatment Due to Unobserved Factors \\textbackslash{}n'\n",
-       "\\end{description}\n"
-      ],
-      "text/markdown": [
-       "$Gamma\n",
-       ":   1.5\n",
-       "$GammaInc\n",
-       ":   0.1\n",
-       "$pval\n",
-       ":   0.0331\n",
-       "$msg\n",
-       ":   'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\n'\n",
-       "$bounds\n",
-       ":   \n",
-       "| Gamma | Lower bound | Upper bound |\n",
-       "|---|---|---|\n",
-       "| 1.0    | 0.0331 | 0.0331 |\n",
-       "| 1.1    | 0.0014 | 0.2431 |\n",
-       "| 1.2    | 0.0000 | 0.6342 |\n",
-       "| 1.3    | 0.0000 | 0.9031 |\n",
-       "| 1.4    | 0.0000 | 0.9856 |\n",
-       "| 1.5    | 0.0000 | 0.9987 |\n",
-       "\n",
-       "\n",
-       "$note\n",
-       ":   'Note: Gamma is Odds of Differential Assignment To\\n Treatment Due to Unobserved Factors \\n'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "\n",
-       " Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \n",
-       " \n",
-       "Unconfounded estimate ....  0.0331 \n",
-       "\n",
-       " Gamma Lower bound Upper bound\n",
-       "   1.0      0.0331      0.0331\n",
-       "   1.1      0.0014      0.2431\n",
-       "   1.2      0.0000      0.6342\n",
-       "   1.3      0.0000      0.9031\n",
-       "   1.4      0.0000      0.9856\n",
-       "   1.5      0.0000      0.9987\n",
-       "\n",
-       " Note: Gamma is Odds of Differential Assignment To\n",
-       " Treatment Due to Unobserved Factors \n",
-       " "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#sensitivity analysis:\n",
-    "library('rbounds')\n",
-    "psens(moutId1, Gamma = 1.5, GammaInc = 0.1)\n",
-    "\n",
-    "library('rbounds')\n",
-    "psens(moutIr1, Gamma = 1.5, GammaInc = 0.1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trying to improve Match Balance for Individuals"
+    "# Trying to improve Match Balance for Party Voting"
    ]
   },
   {
@@ -63343,220 +63134,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 100,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<dl>\n",
-       "\t<dt>$Gamma</dt>\n",
-       "\t\t<dd>1.5</dd>\n",
-       "\t<dt>$GammaInc</dt>\n",
-       "\t\t<dd>0.1</dd>\n",
-       "\t<dt>$pval</dt>\n",
-       "\t\t<dd>0.2464</dd>\n",
-       "\t<dt>$msg</dt>\n",
-       "\t\t<dd>'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\n'</dd>\n",
-       "\t<dt>$bounds</dt>\n",
-       "\t\t<dd><table>\n",
-       "<thead><tr><th scope=col>Gamma</th><th scope=col>Lower bound</th><th scope=col>Upper bound</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>1.0   </td><td>0.2464</td><td>0.2464</td></tr>\n",
-       "\t<tr><td>1.1   </td><td>0.1673</td><td>0.3413</td></tr>\n",
-       "\t<tr><td>1.2   </td><td>0.1110</td><td>0.4378</td></tr>\n",
-       "\t<tr><td>1.3   </td><td>0.0723</td><td>0.5300</td></tr>\n",
-       "\t<tr><td>1.4   </td><td>0.0463</td><td>0.6140</td></tr>\n",
-       "\t<tr><td>1.5   </td><td>0.0294</td><td>0.6880</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n",
-       "</dd>\n",
-       "\t<dt>$note</dt>\n",
-       "\t\t<dd>'Note: Gamma is Odds of Differential Assignment To\\n Treatment Due to Unobserved Factors \\n'</dd>\n",
-       "</dl>\n"
-      ],
-      "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$Gamma] 1.5\n",
-       "\\item[\\$GammaInc] 0.1\n",
-       "\\item[\\$pval] 0.2464\n",
-       "\\item[\\$msg] 'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\textbackslash{}n'\n",
-       "\\item[\\$bounds] \\begin{tabular}{r|lll}\n",
-       " Gamma & Lower bound & Upper bound\\\\\n",
-       "\\hline\n",
-       "\t 1.0    & 0.2464 & 0.2464\\\\\n",
-       "\t 1.1    & 0.1673 & 0.3413\\\\\n",
-       "\t 1.2    & 0.1110 & 0.4378\\\\\n",
-       "\t 1.3    & 0.0723 & 0.5300\\\\\n",
-       "\t 1.4    & 0.0463 & 0.6140\\\\\n",
-       "\t 1.5    & 0.0294 & 0.6880\\\\\n",
-       "\\end{tabular}\n",
-       "\n",
-       "\\item[\\$note] 'Note: Gamma is Odds of Differential Assignment To\\textbackslash{}n Treatment Due to Unobserved Factors \\textbackslash{}n'\n",
-       "\\end{description}\n"
-      ],
-      "text/markdown": [
-       "$Gamma\n",
-       ":   1.5\n",
-       "$GammaInc\n",
-       ":   0.1\n",
-       "$pval\n",
-       ":   0.2464\n",
-       "$msg\n",
-       ":   'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\n'\n",
-       "$bounds\n",
-       ":   \n",
-       "| Gamma | Lower bound | Upper bound |\n",
-       "|---|---|---|\n",
-       "| 1.0    | 0.2464 | 0.2464 |\n",
-       "| 1.1    | 0.1673 | 0.3413 |\n",
-       "| 1.2    | 0.1110 | 0.4378 |\n",
-       "| 1.3    | 0.0723 | 0.5300 |\n",
-       "| 1.4    | 0.0463 | 0.6140 |\n",
-       "| 1.5    | 0.0294 | 0.6880 |\n",
-       "\n",
-       "\n",
-       "$note\n",
-       ":   'Note: Gamma is Odds of Differential Assignment To\\n Treatment Due to Unobserved Factors \\n'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "\n",
-       " Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \n",
-       " \n",
-       "Unconfounded estimate ....  0.2464 \n",
-       "\n",
-       " Gamma Lower bound Upper bound\n",
-       "   1.0      0.2464      0.2464\n",
-       "   1.1      0.1673      0.3413\n",
-       "   1.2      0.1110      0.4378\n",
-       "   1.3      0.0723      0.5300\n",
-       "   1.4      0.0463      0.6140\n",
-       "   1.5      0.0294      0.6880\n",
-       "\n",
-       " Note: Gamma is Odds of Differential Assignment To\n",
-       " Treatment Due to Unobserved Factors \n",
-       " "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<dl>\n",
-       "\t<dt>$Gamma</dt>\n",
-       "\t\t<dd>1.5</dd>\n",
-       "\t<dt>$GammaInc</dt>\n",
-       "\t\t<dd>0.1</dd>\n",
-       "\t<dt>$pval</dt>\n",
-       "\t\t<dd>0.053</dd>\n",
-       "\t<dt>$msg</dt>\n",
-       "\t\t<dd>'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\n'</dd>\n",
-       "\t<dt>$bounds</dt>\n",
-       "\t\t<dd><table>\n",
-       "<thead><tr><th scope=col>Gamma</th><th scope=col>Lower bound</th><th scope=col>Upper bound</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>1.0   </td><td>0.0530</td><td>0.0530</td></tr>\n",
-       "\t<tr><td>1.1   </td><td>0.0298</td><td>0.0881</td></tr>\n",
-       "\t<tr><td>1.2   </td><td>0.0165</td><td>0.1324</td></tr>\n",
-       "\t<tr><td>1.3   </td><td>0.0091</td><td>0.1846</td></tr>\n",
-       "\t<tr><td>1.4   </td><td>0.0049</td><td>0.2425</td></tr>\n",
-       "\t<tr><td>1.5   </td><td>0.0027</td><td>0.3039</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n",
-       "</dd>\n",
-       "\t<dt>$note</dt>\n",
-       "\t\t<dd>'Note: Gamma is Odds of Differential Assignment To\\n Treatment Due to Unobserved Factors \\n'</dd>\n",
-       "</dl>\n"
-      ],
-      "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$Gamma] 1.5\n",
-       "\\item[\\$GammaInc] 0.1\n",
-       "\\item[\\$pval] 0.053\n",
-       "\\item[\\$msg] 'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\textbackslash{}n'\n",
-       "\\item[\\$bounds] \\begin{tabular}{r|lll}\n",
-       " Gamma & Lower bound & Upper bound\\\\\n",
-       "\\hline\n",
-       "\t 1.0    & 0.0530 & 0.0530\\\\\n",
-       "\t 1.1    & 0.0298 & 0.0881\\\\\n",
-       "\t 1.2    & 0.0165 & 0.1324\\\\\n",
-       "\t 1.3    & 0.0091 & 0.1846\\\\\n",
-       "\t 1.4    & 0.0049 & 0.2425\\\\\n",
-       "\t 1.5    & 0.0027 & 0.3039\\\\\n",
-       "\\end{tabular}\n",
-       "\n",
-       "\\item[\\$note] 'Note: Gamma is Odds of Differential Assignment To\\textbackslash{}n Treatment Due to Unobserved Factors \\textbackslash{}n'\n",
-       "\\end{description}\n"
-      ],
-      "text/markdown": [
-       "$Gamma\n",
-       ":   1.5\n",
-       "$GammaInc\n",
-       ":   0.1\n",
-       "$pval\n",
-       ":   0.053\n",
-       "$msg\n",
-       ":   'Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \\n'\n",
-       "$bounds\n",
-       ":   \n",
-       "| Gamma | Lower bound | Upper bound |\n",
-       "|---|---|---|\n",
-       "| 1.0    | 0.0530 | 0.0530 |\n",
-       "| 1.1    | 0.0298 | 0.0881 |\n",
-       "| 1.2    | 0.0165 | 0.1324 |\n",
-       "| 1.3    | 0.0091 | 0.1846 |\n",
-       "| 1.4    | 0.0049 | 0.2425 |\n",
-       "| 1.5    | 0.0027 | 0.3039 |\n",
-       "\n",
-       "\n",
-       "$note\n",
-       ":   'Note: Gamma is Odds of Differential Assignment To\\n Treatment Due to Unobserved Factors \\n'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "\n",
-       " Rosenbaum Sensitivity Test for Wilcoxon Signed Rank P-Value \n",
-       " \n",
-       "Unconfounded estimate ....  0.053 \n",
-       "\n",
-       " Gamma Lower bound Upper bound\n",
-       "   1.0      0.0530      0.0530\n",
-       "   1.1      0.0298      0.0881\n",
-       "   1.2      0.0165      0.1324\n",
-       "   1.3      0.0091      0.1846\n",
-       "   1.4      0.0049      0.2425\n",
-       "   1.5      0.0027      0.3039\n",
-       "\n",
-       " Note: Gamma is Odds of Differential Assignment To\n",
-       " Treatment Due to Unobserved Factors \n",
-       " "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "#sensitivity analysis:\n",
-    "library('rbounds')\n",
-    "psens(moutIyd2, Gamma = 1.5, GammaInc = 0.1)\n",
+    "#### Takeaways\n",
     "\n",
-    "library('rbounds')\n",
-    "psens(moutIyr2, Gamma = 1.5, GammaInc = 0.1)"
+    "Dropped too many, can't draw causal conclusion."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
