--- a/Stats/Bayesian Stats.ipynb
+++ b/Stats/Bayesian Stats.ipynb
@@ -83,6 +83,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exponential distribution with maximum likelihood fit to the data\n",
+    "lambda_ = 1 / np.mean(waiting_times_hour)\n",
+    "distribution = sts.expon(scale=1/lambda_)\n",
+    "\n",
+    "\n",
+    "# Exponential distribution with maximum likelihood fit to the data\n",
+    "lambda_ = 1 / np.mean(waiting_times_hour)\n",
+    "distribution = sts.expon(scale=1/lambda_)\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.hist(waiting_times_hour, bins=20, density=True, color='#c0c0c0')\n",
+    "x = np.linspace(0, max(waiting_times_hour), 200)\n",
+    "y = distribution.pdf(x)\n",
+    "plt.plot(x, y)\n",
+    "plt.xlabel('Time between calls [minutes]')\n",
+    "plt.ylabel('Density')\n",
+    "plt.title(f'Fit of maximum likelihood estimate to the data for hour {hour_index}')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
